--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,31 @@
 h1{
     color: blue;
 }
+
+form0 {
+    position: absolute;
+    top: 70px;
+    left: 10px;
+    font-size: 18px;
+}
+
+form1 {
+    position: absolute;
+    top: 70px;
+    left: 200px;
+    font-size: 18px;
+}
+
+form2 {
+    position: absolute;
+    top: 70px;
+    left: 450px;
+    font-size: 18px;
+}
+
+form3 {
+    position: absolute;
+    top: 70px;
+    left: 800px;
+    font-size: 18px;
+}
