--- a/styles.css
+++ b/styles.css
@@ -2,30 +2,53 @@ h1{
     color: blue;
 }
 
-form0 {
+div.searchFormYear {
     position: absolute;
-    top: 70px;
+    top: 80px;
     left: 10px;
-    font-size: 18px;
+    width: 200px;
+    height: 100px;
 }
 
-form1 {
+div.searchFormAge {
     position: absolute;
-    top: 70px;
-    left: 200px;
-    font-size: 18px;
+    top: 80px;
+    left: 150px;
+    width: 200px;
+    height: 100px;
 }
 
-form2 {
+div.searchFormIncome {
     position: absolute;
-    top: 70px;
-    left: 450px;
-    font-size: 18px;
+    top: 80px;
+    left: 350px;
+    width: 300px;
+    height: 100px;
 }
 
-form3 {
+div.searchFormSex {
     position: absolute;
-    top: 70px;
-    left: 800px;
-    font-size: 18px;
+    top: 80px;
+    left: 650px;
+    width: 200px;
+    height: 100px;
+}
+
+div.address {
+    position: absolute;
+    top: 80px;
+    left: 900px;
+    height: 100px;
+}
+
+div.PeopleCount {
+    position: absolute;
+    top: 400px;
+    left: 10px;
+}
+
+p{
+    position: absolute;
+    left: 10px;
+    top: 300px;
 }
